# halo_bench

./: README.md  build-android.sh  pubspec.yaml
.github/workflows/: build-android.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  main.dart
macos/Runner/: bridge_generated.h
native/: Cargo.toml
native/native.xcodeproj/: project.pbxproj
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  build_tx.rs  gen_tests.rs  lib.rs  tx_types.rs
