[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"

orchard = "0.3.0"
incrementalmerkletree = "0.3.0"
rand_chacha = "0.3.1"
lazy_static = "1.4.0"
